--- a/styles.css
+++ b/styles.css
@@ -1216,10 +1216,11 @@ a {
 }
 @media (max-width: 768px) {
   .card-label.dark-label {
-    transform: scale(0.9);
+    font-size: 12px !important;
+    padding: 0.2rem 0.6rem !important;
+    
   }
 }
-
 
 .card-label:hover {
   background-color: white;
