--- a/styles.css
+++ b/styles.css
@@ -974,11 +974,11 @@ a {
  
 
 .large-text h1 {
-  font-size: clamp(2.1rem, 7.5vw, 12rem);
+  font-size: clamp(4rem, 7.5vw, 12rem);
   font-weight: 600;
   color: #ffffff;
   text-align: left;
-  margin-bottom: clamp(1.6rem, 3vw, 5rem);
+  margin-bottom: clamp(2.5rem, 3vw, 5rem);
   line-height: 0.9; /* Tighter spacing than default */
   
 }
@@ -986,12 +986,13 @@ a {
   color: #54f3a4;
 }
 .large-text p {
-  font-size: clamp(1.3rem, 3.5vw, 4.5rem);
+  font-size: clamp(1.8rem, 3.5vw, 4.5rem);
   font-weight: 200;
   color: #ffffff;
   text-align: left;
   margin-top: 1rem;
-  line-height: 1;
+  line-height: 1.1;
+  color:#dddddd;
 }
 .large-text2 p {
   visibility: hidden;
@@ -1073,8 +1074,8 @@ a {
 
 /* Typography that scales */
 .card-title {
-  font-size: clamp(1.8rem, 2.5vw, 5rem);
-  margin-bottom: 2rem;
+  font-size: clamp(2rem, 2.5vw, 5rem);
+  margin-bottom: 1rem;
   color: #54f3a4;
   font-weight: 200;
 }
@@ -1190,9 +1191,7 @@ a {
     min-height: 350px;  /* Optional: set a floor to avoid too-short cards */
   }
 
-  .card-title {
-    font-size: clamp(2.5rem, 6vw, 4rem); /* larger min size */
-  }
+ 
 
   .card-text {
     font-size: clamp(1.2rem, 4vw, 2rem);
