--- a/styles.css
+++ b/styles.css
@@ -549,25 +549,16 @@ a {
   z-index: 0;
 }
 
-  .main {
-    height: 100vh;
-    background-color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    position: relative; /* Needed for ::before positioning */
-    z-index: 0;
-    position: relative;
-    
-  }
+.main {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; /* change from flex-start */
+}
   
   .main-inner {
     width: 100%;
     height: 100%;
-    padding-inline: clamp(2rem, 8vw, 10rem); /* Side margins */
-    padding-block: 5rem;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -575,21 +566,21 @@ a {
     margin-top: 0px;
   }
   
-  .section-main {
-    scale: 1.1;
-    margin-top: 85px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.section-main {
+  width: 100vw;
+  height: 85vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  /* add */
+  align-items: center;
+  text-align: center;
+}
   
   .section1,
   .section2 {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 0;
     margin: 0px;
   }
   .section2 {
@@ -606,6 +597,7 @@ a {
     display: flex; /* make Visual and Designs side-by-side */
     align-items: center;
     gap: clamp(1rem, calc((100vw - 1600px) * 0.5 + 1rem), 7rem);
+    
   }
   
   /* Separate font sizes */
@@ -641,7 +633,7 @@ a {
   }
 .design h1 {
   margin: 0;
-  font-size: clamp(5rem, 8vw, 12rem);
+  font-size: clamp(1rem, 2vw, 2.4rem);
   font-family: 'Funnel Display';
   font-weight: 600;
 }
@@ -1013,8 +1005,8 @@ a {
 }
  
 
-.large-text h1 {
-  font-size: clamp(3.5rem, 7.5vw, 12rem);
+.large-text h2 {
+  font-size: clamp(3.5rem, 5.3vw, 8rem);
   font-weight: 600;
   color: #ffffff;
   text-align: left;
