--- a/styles.css
+++ b/styles.css
@@ -1073,6 +1073,15 @@ a {
   justify-content: space-between;
 }
 @media (max-width: 768px) {
+  .large-text h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #ffffff;
+  text-align: left;
+  margin-bottom: clamp(2.5rem, 3vw, 5rem);
+  line-height: 0.9; /* Tighter spacing than default */
+  
+}
   .services-card {
     flex: 1 1 100%;
     max-width: 100%;
