dropdown video test

--- a/styles.css
+++ b/styles.css
@@ -1072,7 +1072,7 @@ a {
     top: 80px;        /* below navbar */
     left: 0;
     right: 0;
-    height: 70vh;
+    height: 70svh; /* or dvh */
     z-index: 0;
   }
 
