--- a/styles.css
+++ b/styles.css
@@ -837,6 +837,9 @@ a {
     font-size: 0.8rem;     /* ✅ change visible on mobile */
     padding: 0.6rem 1.1rem;/* ✅ change visible on mobile */
   }
+  #btn-hide {
+    display: none;
+  }
 }
 
 
